<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/navigation_diseases"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/title_diseases" />

        <item
            android:id="@+id/navigation_research"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_research" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/navigation_communication"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/title_communication" />
        </menu>
    </item>

</menu>
